--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ input {
     line-height: 47px;
     color: #FFFFFF;
     opacity: 0.7;
+    cursor: pointer;
 }
 
 .input-min {
@@ -83,6 +84,10 @@ button:hover {
 
 button:active {
     opacity: 0.8;
+}
+
+input:hover {
+    opacity: 0.5;
 }
 
 @media (max-width: 1400px) {
